# WhatsDer

./: .gitignore  引脚定义.xlsx
2.Firmware/: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  command.txt  dataflow.dio  gdbinit  sdkconfig  sdkconfig.defaults  sdkconfig.old
2.Firmware/main/: CMakeLists.txt  idf_component.yml  main.c  main.cpp  wifi.c
2.Firmware/main/app/: app.cpp  app.hpp  audio.c  audio.h  button.c  button.h  camera.c  camera.h  cpp_test.cpp  cpp_test.h  display.cpp  display.hpp  event_declare.c  event_declare.h  recoder.cpp  recoder.hpp  request.cpp  request.hpp  request_test.cpp  requests.c  requests.h  requests_old.c  requests_old.h
2.Firmware/main/common/: config.h  password.h  type_define.h
2.Firmware/main/gui/: events_init.c  gui_guider.h  lv_font_arial_16.c  lv_font_montserratMedium_12.c  lv_font_montserratMedium_16.c  setup_scr_screen.c  ui.c  ui.h  ui_events.c  ui_events.h  ui_helpers.c  ui_helpers.h
2.Firmware/main/gui/components/: ui_comp_hook.c
2.Firmware/main/gui/fonts/: ui_font_Chinease.c  ui_font_Chinease.h
2.Firmware/main/gui/screens/: ui_Screen1.c  ui_Screen2.c  ui_Screen3.c  ui_Screen4.c  ui_Screen5.c  ui_Screen6.c
2.Firmware/main/hal/: hal.c  hal.h  hal_audio.c  hal_camera.c  hal_encode.c  hal_screen.c  hal_wifi.c
2.Firmware/main/port/: lvgl_port.c  lvgl_port.h
3.Server/: pyproject.toml
3.Server/whatsderserver/: baidu_aip.py  const.py  main.py  openai_api.py  realtime_asr.py  thread_helper.py
3.Server/whatsderserver/resource/: 0.txt  1.txt  2.txt  3.txt  4.txt  5.txt  rgb565torgb888.py
(+6 files in other folders)
